--- a/art.html
+++ b/art.html
@@ -8,86 +8,69 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Portfolio</title>
+      crossorigin="anonymous"/> 
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>Hand drawn art</title>
   </head>
-  
-  
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid"> 
-             <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                 <img src = "art/logo.png"></a>
-                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-               <!-- <li><a class="dropdown-item" href="#">SidRat Games</a></li> -->
-               <li><a class="dropdown-item" href="https://podcasts.sidratgames.repl.co">Dispatched from the forest</a></li>
-               <li><a class="dropdown-item" href="https://TreasureHounds.sidratgames.repl.co">Treasure Hounds</a></li>
-               <li><a class="dropdown-item" href="https://GreenStar.sidratgames.repl.co">GreenStar Families</a></li>
-               <li><a class="dropdown-item" href="https://main.mcmad.repl.co">McMad</a></li>
-             </ul></li>
-       <a class="navbar-brand" href="https://drum.io/sidratgames/">Tim Huser</a>
-       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-         <span class="navbar-toggler-icon"></span>
-       </button>
-       <div class="collapse navbar-collapse" id="navbarNavDropdown">
-         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html"><b>Home</b></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://www.linkedin.com/in/sidrat/"><img src="art/linkedin.png"/></a>
-          </li>
-           <li class="nav-item">
-             <a class="nav-link" href="https://www.facebook.com/Sidrat-Web-Design-113584011121468"><img src="art/fbLogo.png"/></a>
-           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="game.html"><img src="art/jinxLogo.png"/></a>
-           </li>
-           <li class="nav-item">
-           <a class="nav-link" href="mailto:SidRatGames@protonmail.com?Subject=Protential Job" target="_top"><img src="art/email.jpg"></a>
-          </li>
-             </ul>
-           </li>
-         </ul>
-       </div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid"> 
+           <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+               <img src = "art/logo.png"></a>
+               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+             <!-- <li><a class="dropdown-item" href="#">SidRat Games</a></li> -->
+             <li><a class="dropdown-item" href="https://podcasts.sidratgames.repl.co">Dispatched from the forest</a></li>
+             <li><a class="dropdown-item" href="https://TreasureHounds.sidratgames.repl.co">Treasure Hounds</a></li>
+             <li><a class="dropdown-item" href="https://GreenStar.sidratgames.repl.co">GreenStar Families</a></li>
+             <li><a class="dropdown-item" href="https://main.mcmad.repl.co">McMad</a></li>
+           </ul></li>
+     <a class="navbar-brand" href="https://drum.io/sidratgames/">Tim Huser</a>
+     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+       <span class="navbar-toggler-icon"></span>
+     </button>
+     <div class="collapse navbar-collapse" id="navbarNavDropdown">
+       <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>   
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.linkedin.com/in/sidrat/"><img src="art/linkedin.png"/>My Linkedin</a>
+        </li>
+         <li class="nav-item">
+           <a class="nav-link" href="https://www.facebook.com/Sidrat-Web-Design-113584011121468"><img src="art/fbLogo.png"/>My Facebook</a>
+         </li>
+         <li class="nav-item">
+          <a class="nav-link" href="contact.html" target="_top"><img src="art/email.jpg">Contact Me</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="game.html"><img src="art/jinxLogo.png"/>Choice based game</a>
+         </li>
+           </ul>
+         </li>
+       </ul>
      </div>
-   </nav>
-      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="art/gd.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="art/ghost.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="art/gamer.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="art/Jinx.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="art/happy.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="art/maid.jpg" class="d-block w-100" alt="...">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-  </body>
-  <script
+   </div>
+ </nav>
+	<div id="slideshow">
+		<div class="slide-wrapper">
+			<!-- <div class="slide">
+				<img src="art/Daz.jpg" alt="...">
+			</div> -->
+			<div class="slide">
+                <img src="art/gamer.jpg" alt="...">
+			</div>
+			<div class="slide">
+                <img src="art/ghost.jpg" alt="...">
+			</div>
+            <div class="slide">
+                <img src="art/Jinx.jpg" alt="...">
+			</div>        
+			<div class="slide">
+                <img src="art/gd.jpg" alt="...">
+			</div>
+		</div>
+	</div>
+ <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"
   ></script>
-</html>
