--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,11 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    /> 
+      crossorigin="anonymous"/> 
     <link href="style.css" rel="stylesheet" type="text/css" />
     <title>Contact</title>
   </head>
+  <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid"> 
            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -31,19 +31,22 @@
      <div class="collapse navbar-collapse" id="navbarNavDropdown">
        <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="index.html"><b>Home</b></a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://www.linkedin.com/in/sidrat/"><img src="art/linkedin.png"/></a>
+          <a class="nav-link" href="https://www.linkedin.com/in/sidrat/"><img src="art/linkedin.png"/>My Linkedin</a>
         </li>
          <li class="nav-item">
-           <a class="nav-link" href="https://www.facebook.com/Sidrat-Web-Design-113584011121468"><img src="art/fbLogo.png"/></a>
+           <a class="nav-link" href="https://www.facebook.com/Sidrat-Web-Design-113584011121468"><img src="art/fbLogo.png"/>My Facebook</a>
          </li>
          <li class="nav-item">
-           <a class="nav-link" href="game.html"><img src="art/jinxLogo.png"/></a>
+          <a class="nav-link" href="contact.html" target="_top"><img src="art/email.jpg">Contact Me</a>
          </li>
          <li class="nav-item">
-         <a class="nav-link" href="mailto:SidRatGames@protonmail.com?Subject=Protential Job" target="_top"><img src="art/email.jpg"></a>
+           <a class="nav-link" href="game.html"><img src="art/jinxLogo.png"/>Choice based game</a>
+         </li>
+         <li class="nav-item">
+          <a class="nav-link" href="dazArt.html"><img src="art/artThumb.png"/>My Daz3D characters</a>
         </li>
            </ul>
          </li>
