--- a/game.html
+++ b/game.html
@@ -34,19 +34,19 @@
        <div class="collapse navbar-collapse" id="navbarNavDropdown">
          <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html"><b>Home</b></a>
-          </li>
+            <a class="nav-link" href="index.html">Home</a>
+          </li> 
           <li class="nav-item">
-            <a class="nav-link" href="https://www.linkedin.com/in/sidrat/"><img src="art/linkedin.png"/></a>
+            <a class="nav-link" href="https://www.linkedin.com/in/sidrat/"><img src="art/linkedin.png"/>My Linkedin</a>
           </li>
            <li class="nav-item">
-             <a class="nav-link" href="https://www.facebook.com/Sidrat-Web-Design-113584011121468"><img src="art/fbLogo.png"/></a>
+             <a class="nav-link" href="https://www.facebook.com/Sidrat-Web-Design-113584011121468"><img src="art/fbLogo.png"/>My Facebook</a>
            </li>
            <li class="nav-item">
-            <a class="nav-link" href="mailto:SidRatGames@protonmail.com?Subject=Protential Job" target="_top"><img src="art/email.jpg"></a>
+            <a class="nav-link" href="contact.html" target="_top"><img src="art/email.jpg">Contact Me</a>
            </li>
            <li class="nav-item">
-            <a class="nav-link" href="art.html"><img src="art/artThumb.png"/></a>
+            <a class="nav-link" href="dazArt.html"><img src="art/artThumb.png"/>My Daz3D characters</a>
           </li>
              </ul>
            </li>
