--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    /> 
+      crossorigin="anonymous"/> 
     <link href="style.css" rel="stylesheet" type="text/css" />
     <title>Portfolio</title>
   </head>
@@ -32,19 +31,19 @@
        <div class="collapse navbar-collapse" id="navbarNavDropdown">
          <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="https://www.linkedin.com/in/sidrat/"><img src="art/linkedin.png"/></a>
+            <a class="nav-link" href="https://www.linkedin.com/in/sidrat/"><img src="art/linkedin.png"/>My Linkedin</a>
           </li>
            <li class="nav-item">
-             <a class="nav-link" href="https://www.facebook.com/Sidrat-Web-Design-113584011121468"><img src="art/fbLogo.png"/></a>
+             <a class="nav-link" href="https://www.facebook.com/Sidrat-Web-Design-113584011121468"><img src="art/fbLogo.png"/>My Facebook</a>
            </li>
            <li class="nav-item">
-            <a class="nav-link" href="contact.html" target="_top"><img src="art/email.jpg"></a>
+            <a class="nav-link" href="contact.html" target="_top"><img src="art/email.jpg">Contact Me</a>
            </li>
            <li class="nav-item">
-             <a class="nav-link" href="game.html"><img src="art/jinxLogo.png"/></a>
+             <a class="nav-link" href="game.html"><img src="art/jinxLogo.png"/>Choice based game</a>
            </li>
            <li class="nav-item">
-            <a class="nav-link" href="art.html"><img src="art/artThumb.png"/></a>
+            <a class="nav-link" href="dazArt.html"><img src="art/artThumb.png"/>My Daz3D characters</a>
           </li>
              </ul>
            </li>
@@ -59,7 +58,7 @@
       <hr></br>
       <img class="me" src = "art/me.jpg">
       <hr> As a child, one of my favorite toys was a six wheel “computer car”. There were arrow buttons on top of it. The play was to enter directions and time travel then go. In hindsight I was doing basic programming as a toddler, writing and executing a basic code. That was my favorite toy for years. To be honest, I wasn’t the best student in High School. However, computer class was my jam. At the time we were taught DOS. The strict method of writing the code was exactly what my mind needed.
-        I have a deeply instilled passion for coding. That is why I'm currently taking an Eleven Fifty boot camp, and will be continuing to learn new languages as they emerge.
+        I have a deeply instilled passion for coding. That is why I took an Eleven Fifty boot camp, and will be continuing to learn new languages as they emerge.
         </p>
         <a href="wkHistory.html"><img src = "art/wkButton.png"></a>
   </div>
