--- a/wkHistory.html
+++ b/wkHistory.html
@@ -27,29 +27,29 @@
                <li><a class="dropdown-item" href="https://GreenStar.sidratgames.repl.co">GreenStar Families</a></li>
                <li><a class="dropdown-item" href="https://main.mcmad.repl.co">McMad</a></li>
              </ul></li>
-       <a class="navbar-brand" href="https://www.linkedin.com/in/sidrat/">Tim Huser</a>
+       <a class="navbar-brand" href="https://drum.io/sidratgames/">Tim Huser</a>
        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
        </button>
        <div class="collapse navbar-collapse" id="navbarNavDropdown">
          <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html"><b>Home</b></a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://www.linkedin.com/in/sidrat/"><img src="art/linkedin.png"/></a>
+            <a class="nav-link" href="https://www.linkedin.com/in/sidrat/"><img src="art/linkedin.png"/>My Linkedin</a>
           </li>
            <li class="nav-item">
-             <a class="nav-link" href="https://www.facebook.com/Sidrat-Web-Design-113584011121468"><img src="art/fbLogo.png"/></a>
+             <a class="nav-link" href="https://www.facebook.com/Sidrat-Web-Design-113584011121468"><img src="art/fbLogo.png"/>My Facebook</a>
            </li>
            <li class="nav-item">
-            <a class="nav-link" href="mailto:SidRatGames@protonmail.com?Subject=Protential Job" target="_top"><img src="art/email.jpg"></a>
+            <a class="nav-link" href="contact.html" target="_top"><img src="art/email.jpg">Contact Me</a>
            </li>
            <li class="nav-item">
-             <a class="nav-link" href="game.html"><img src="art/jinxLogo.png"/></a>
+             <a class="nav-link" href="game.html"><img src="art/jinxLogo.png"/>Choice based game</a>
            </li>
            <li class="nav-item">
-            <a class="nav-link" href="art.html"><img src="art/artThumb.png"/></a>
+            <a class="nav-link" href="dazArt.html"><img src="art/artThumb.png"/>My Daz3D characters</a>
           </li>
              </ul>
            </li>
